--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
     name: Docker Build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       - name: QEMU
         uses: docker/setup-qemu-action@v1
 
